Configuración arquitectura