@@ -1,7 +1,7 @@
-package fasttask.controller.runners;
+package fasttask.controller.code;
 
-import fasttask.data.ConfigInformation;
-import fasttask.controller.system.FileController;
+import fasttask.controller.settting.SettingController;
+import fasttask.data.system.FileAccess;
 import java.awt.Color;
 import java.io.BufferedReader;
 import java.io.File;
@@ -11,9 +11,12 @@ import java.util.Arrays;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-public class PythonRunner implements Runner {
+public class PythonController implements Runner {
 
-    Process process;
+    static final String PYTHON_GENERATED_FILE = "src/fasttask/data/files/generated/PythonGenerated/PythonGenerated.py";
+    static final String PYTHON_GENERATED_DIRECTORY = "src/fasttask/data/files/generated/PythonGenerated";
+    
+    boolean stop;
     
     @Override
     public Object[] info(String code) {
@@ -44,7 +47,7 @@ public class PythonRunner implements Runner {
     }
 
     @Override
-    public void run(String code, String[] parameters) {
+    public void run(String code, String[] parameters, CommandLine commandLine) {
         
         new Thread(){
             
@@ -66,14 +69,35 @@ public class PythonRunner implements Runner {
                 String generatedCode = code + "\n" + nameClass + "(" + parametersString.substring(1, parametersString.length() - 1) + ")";
 
                 // Generar ejecutable
-                FileController fileController = new FileController();
-                fileController.savedContent("Data/Generated/PythonGenerated.py", generatedCode);
+                FileAccess.savedContent(PYTHON_GENERATED_FILE, generatedCode);
 
                 try {
 
                     // Ejecutar clase
-                    String command = ConfigInformation.getPythonFolder() + "\\python.exe \"" + new File("Data/Generated/PythonGenerated.py").getAbsoluteFile().toString() + "\"";
-                    process = Runtime.getRuntime().exec(command);
+                    String command = SettingController.getPythonFolder() + "\\python.exe \"" + new File(PYTHON_GENERATED_FILE).getAbsoluteFile().toString() + "\"";
+                    ProcessBuilder processBuilder = new ProcessBuilder("cmd.exe", "/C", command);
+                    Process process = processBuilder.start();
+                    
+                    // Obtener resultados
+                    BufferedReader stdInput = new BufferedReader(new InputStreamReader(process.getInputStream(), "ISO-8859-1"));
+                    String aux = stdInput.readLine();
+                    System.out.println(aux);
+                    while (!stop && aux != null) {
+                        commandLine.write(aux + "\n");
+                        aux = stdInput.readLine();
+                        System.out.println(aux);
+                    }
+                    if (!stop) {
+                        BufferedReader stdInput2 = new BufferedReader(new InputStreamReader(process.getErrorStream(), "ISO-8859-1"));
+                        String aux2 = stdInput2.readLine();
+                        System.out.println(aux);
+                        while (aux2 != null) {
+                            System.out.println(process);
+                            commandLine.writeError(aux2 + "\n");
+                            aux2 = stdInput2.readLine();
+                            System.out.println(aux);
+                        }
+                    }
 
                 } catch (IOException e) {
                 }
@@ -83,39 +107,10 @@ public class PythonRunner implements Runner {
         }.start();
 
     }
-
-    @Override
-    public String[] returns() {
-        
-        try {
-
-            // Obtener resultado
-            BufferedReader stdInput = new BufferedReader(new InputStreamReader(process.getInputStream(), "ISO-8859-1"));
-            String aux = stdInput.readLine();
-            String result1 = "";
-            while (aux != null) {
-                result1 += aux + "\n";
-                aux = stdInput.readLine();
-            }
-            BufferedReader stdInput2 = new BufferedReader(new InputStreamReader(process.getErrorStream(), "ISO-8859-1"));
-            aux = stdInput2.readLine();
-            String result2 = "";
-            while (aux != null) {
-                result2 += aux + "\n";
-                aux = stdInput2.readLine();
-            }
-            return new String[]{result1, result2};
-        } catch (IOException e) {
-        }
-        return new String[]{"", ""};
-    }
-
     
     @Override
     public void stop() {
-        if (process != null) {
-            process.destroy();
-        }
+        stop = true;
     }
     
     @Override
